# ros_composition_nodelets

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
include/ros_composition_nodelets/: pub_ros1.hpp  pub_ros2.hpp  sub_ros1.hpp  sub_ros2.hpp
launch/: ros1_independent.launch  ros1_nodelets.launch  ros2_components.launch.py  ros2_independent.launch.xml
src/: main_ros1_pub.cpp  main_ros1_sub.cpp  main_ros2_pub.cpp  main_ros2_sub.cpp
src/ros_composition_nodelets/: pub_ros1.cpp  pub_ros2.cpp  sub_ros1.cpp  sub_ros2.cpp
