<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>ros_composition_nodelets</name>
  <version>0.0.0</version>
  <description>Independent nodes vs composition (ROS 2) / nodelets (ROS 1)</description>

  <maintainer email="rbs@fe.up.pt">Ricardo B. Sousa</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/sousarbarb/ros_composition_nodelets</url>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>

  <depend>std_msgs</depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>

</package>